# pytask_scheduler

./: .gitignore  README.md  pyproject.toml  todo.MD
py_taskscheduler/: __init__.py
py_taskscheduler/constants/: __init__.py  monthly_trigger_values.py
py_taskscheduler/objects/: new_task.py  registered_task.py  task_scheduler.py  task_trigger.py
pytask_scheduler/: __init__.py
pytask_scheduler/constants/: __init__.py  constants.py  task_action_types.py  task_creation_types.py  task_logon_types.py  task_setting_values.py  task_trigger_types.py  task_value_definitions.py
pytask_scheduler/frames/: __init__.py  tasks.py
pytask_scheduler/functions/: __init__.py  functions.py
pytask_scheduler/objects/: __init__.py  objects.py  task_actions.py  task_folder.py  task_scheduler.py  task_settings.py  task_triggers.py
taskscheduler/classes/: __init__.py  new_task.py  task_scheduler.py  task_settings.py  taskscheduler.py
taskscheduler/constants/: task_trigger_types.py
